# OceanEye-QT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotatedimage.cpp  annotatedimage.h  deploy-qt-windows.cmake  editmediadialog.cpp  editmediadialog.h  exportdialog.cpp  exportdialog.h  flowlayout.cpp  licence.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  styles.qss  videoslicer.cpp  videoslicer.h  waitingdialog.cpp  welcomewindow.cpp  welcomewindow.h  yolov8.cpp  yolov8.h
.github/workflows/: macOS-Build-and-Test.yml
installer/: deploy-qt-windows.cmake  installscript.qs
qdarkstyle/dark/: darkstyle.qss
src/: main.cpp
src/YOLO/: yolov8.cpp  yolov8.h
src/core/: detectoptions.cpp  detectoptions.h  detectoptions.ui  editmedia.ui  editmediadialog.cpp  editmediadialog.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  importdialog.cpp  importdialog.h  importdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  welcomewindow.cpp  welcomewindow.h  welcomewindow.ui
src/gui/: annotatedimage.cpp  annotatedimage.h  globalsettings.cpp  waitingdialog.cpp  waitingdialog.h
src/gui/settings/: globalsettings.cpp  globalsettings.h  projectsettings.cpp  projectsettings.h  settings.cpp  settings.h
src/python/: modeltrainer.cpp  modeltrainer.h  python.cpp  python.h
src/python/python/: custom_yolo.py  install_packages.py  train.py
src/resources/: about.md  icon.rc  licence.txt  resources.qrc  styles.qss
src/train/: modeltrainer.cpp  modeltrainer.h  traindialog.cpp  traindialog.h  traindialog.ui
src/train/python/: custom_yolo.py  install_packages.py  train.py
src/util/: logger.cpp  logger.h  project.cpp  project.h  settings.cpp  settings.h  videoslicer.cpp  videoslicer.h  yolov8.cpp  yolov8.h
tests/: CMakeLists.txt  test_mainwindow.cpp  test_welcomewindow.cpp
tests/test_project/: .oceaneye.ini
